--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -14,15 +14,16 @@
     "migrate:create": "knex migrate:make -x ts"
   },
   "dependencies": {
-    "app": "link:../app",
     "@backstage/backend-common": "^0.12.0",
     "@backstage/backend-tasks": "^0.1.10",
-    "@backstage/catalog-model": "^0.12.0",
     "@backstage/catalog-client": "^0.8.0",
+    "@backstage/catalog-model": "^0.12.0",
     "@backstage/config": "^0.1.15",
     "@backstage/plugin-app-backend": "^0.3.28",
     "@backstage/plugin-auth-backend": "^0.12.0",
+    "@backstage/plugin-auth-node": "^0.1.5",
     "@backstage/plugin-catalog-backend": "^0.23.0",
+    "@backstage/plugin-permission-backend": "^0.5.3",
     "@backstage/plugin-permission-common": "^0.5.2",
     "@backstage/plugin-permission-node": "^0.5.3",
     "@backstage/plugin-proxy-backend": "^0.2.22",
@@ -33,11 +34,12 @@
     "@gitbeaker/node": "^34.6.0",
     "@internal/plugin-entity-alias-backend": "*",
     "@octokit/rest": "^18.5.3",
+    "@vscode/sqlite3": "^5.0.7",
+    "app": "link:../app",
     "dockerode": "^3.3.1",
     "express": "^4.17.1",
     "express-promise-router": "^4.1.0",
     "knex": "^0.21.6",
-    "@vscode/sqlite3": "^5.0.7",
     "winston": "^3.2.1"
   },
   "devDependencies": {
